Fix bugs, add images, and impelement slider

--- a/index.html
+++ b/index.html
@@ -177,6 +177,9 @@
             </div>
         </section>
 
+
+
+
     </div>
     <section id="services" class="services">
         <div class="container" data-aos="fade-up">
@@ -252,7 +255,27 @@
         </div>
     </section>
 
-
+    <section id="documents" class="documents-slider">
+        <h2 class="documents__title">Документи</h2>
+        <div class="slider-container">
+            <button class="prev-btn">&#10094;</button>
+            <div class="slider-wrapper">
+                <div class="slider-item">
+                    <a href="https://new.bc-rada.gov.ua/miska_rada/normatyvni_akty/179_pro_skhvalennia_proektu_rishennia_bilotserkivskoi_miskoi_rady_pro_vnesennia_zmin_do_statutu_komunalnoho_pidpryiemstva_bilotserkivskoi_miskoi_rady__munitsypalna_varta/34585.pdf"
+                        target="_blank">Статут КП БМР "Муніципальна варта"</a>
+                </div>
+                <div class="slider-item">
+                    <a href="http://91.192.153.59/eco/information-kp/munvarta/perelic-robit.pdf" target="_blank">Перелік
+                        робіт і послуг КП БМР "Муніципальна варта"</a>
+                </div>
+                <div class="slider-item">
+                    <a href="http://91.192.153.59/eco/information-kp/munvarta/shtatnyi.pdf" target="_blank">Штат КП БМР
+                        "Мунiципальна варта"</a>
+                </div>
+            </div>
+            <button class="next-btn">&#10095;</button>
+        </div>
+    </section>
     <!-- Модальне вікно -->
     <div id="modal" class="modal hidden">
         <div class="modal-content">
@@ -284,16 +307,7 @@
                     <p><i class="fas fa-phone"></i> +380 960 000 002</p>
                 </div>
 
-                <!-- Права частина: документи -->
-                <div class="contacts-documents">
-                    <ul>
-                        <li><i class="fas fa-file-alt"></i> <a
-                                href="https://new.bc-rada.gov.ua/miska_rada/normatyvni_akty/179_pro_skhvalennia_proektu_rishennia_bilotserkivskoi_miskoi_rady_pro_vnesennia_zmin_do_statutu_komunalnoho_pidpryiemstva_bilotserkivskoi_miskoi_rady__munitsypalna_varta/34585.pdf"
-                                target="_blank">Статут</a>
-                        </li>
 
-                    </ul>
-                </div>
             </div>
 
             <div class="contacts-social">
