--- a/index.html
+++ b/index.html
@@ -265,8 +265,7 @@
                         target="_blank">Статут КП БМР "Муніципальна варта"</a>
                 </div>
                 <div class="slider-item">
-                    <a href="http://91.192.153.59/eco/information-kp/munvarta/perelic-robit.pdf" target="_blank">Перелік
-                        робіт і послуг КП БМР "Муніципальна варта"</a>
+                    <a href="http://91.192.153.59/eco/information-kp/munvarta/perelic-robit.pdf" target="_blank">Послуги КП БМР "Муніципальна варта"</a>
                 </div>
                 <div class="slider-item">
                     <a href="http://91.192.153.59/eco/information-kp/munvarta/shtatnyi.pdf" target="_blank">Штат КП БМР
