--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Муніципальна Варта Білої Церкви</title>
+    <title>Муніципальна варта Білої Церкви</title>
+    <meta name="description"
+        content="Офіційний сайт Муніципальної варти Білої Церкви. Інформація про діяльність, послуги та новини організації. Зв'яжіться з нами для отримання додаткової інформації.">
+
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -45,7 +48,6 @@
         </header>
 
 
-        <!-- Головний блок -->
         <section id="main" class="hero">
             <div class="hero-content" data-aos="fade-up">
                 <h1 class="title__hero">Муніципальна Варта Білої Церкви</h1>
@@ -88,7 +90,7 @@
                 </div>
 
 
-                <!-- Лічильники -->
+
                 <div class="counters" data-aos="fade-up">
                     <div class="counter">
                         <span class="number" data-target="24">0</span>
@@ -108,7 +110,7 @@
                     </div>
                 </div>
 
-                <!-- Акордеон з лаконічними питаннями та відповідями -->
+
                 <div class="accordion" data-aos="fade-up">
                     <div class="accordion-item">
                         <button class="accordion-header">Хто ми?</button>
@@ -185,14 +187,14 @@
         <div class="container" data-aos="fade-up">
             <h2>Наші Послуги</h2>
             <div class="services-container" data-aos="fade-up">
-                <!-- Картка 1 -->
+
                 <div class="service-card">
                     <i class="fas fa-shield-alt"></i>
                     <h3>Охорона громадського порядку</h3>
                     <p>Забезпечення безпеки на території міста, охорона публічного порядку.</p>
                     <button class="service__btn">Замовити</button>
                 </div>
-                <!-- Картка 2 -->
+
                 <div class="service-card">
                     <i class="fas fa-building"></i>
                     <h3>Охорона об'єктів та майна</h3>
@@ -200,7 +202,7 @@
                     </p>
                     <button class="service__btn">Замовити</button>
                 </div>
-                <!-- Картка 3 -->
+
                 <div class="service-card">
                     <i class="fas fa-fire-extinguisher"></i>
 
@@ -210,14 +212,14 @@
                         пожежної сигналізації.</p>
                     <button class="service__btn">Замовити</button>
                 </div>
-                <!-- Картка 4 -->
+
                 <div class="service-card">
                     <i class="fas fa-video"></i>
                     <h3>Встановлення та обслуговування відеоспостереження</h3>
                     <p>Проектування та обслуговування систем відеоспостереження для підвищення безпеки.</p>
                     <button class="service__btn">Замовити</button>
                 </div>
-                <!-- Картка 5 -->
+
                 <div class="service-card">
                     <i class="fas fa-bell"></i>
                     <h3>Охоронна та тривожна сигналізація</h3>
@@ -225,7 +227,7 @@
                     </p>
                     <button class="service__btn">Замовити</button>
                 </div>
-                <!-- Картка 6 -->
+
                 <div class="service-card">
                     <i class="fas fa-car"></i>
                     <h3>Централізоване спостереження та реагування</h3>
@@ -241,15 +243,24 @@
         <h2>Галерея</h2>
         <div class="container">
             <div class="gallery-container" data-aos="fade-up">
-                <div class="gallery-item" data-aos="fade-up"><img src="images/gallery1.jpg" alt="Фото 1"></div>
-                <div class="gallery-item" data-aos="fade-up"><img src="images/gallery2.jpg" alt="Фото 2"></div>
-                <div class="gallery-item" data-aos="fade-up"><img src="images/gallery3.jpg" alt="Фото 3"></div>
-                <div class="gallery-item" data-aos="fade-up"><img src="images/gallery4.jpg" alt="Фото 4"></div>
-                <div class="gallery-item" data-aos="fade-up"><img src="images/gallery5.jpg" alt="Фото 5"></div>
-                <div class="gallery-item" data-aos="fade-up"><img src="images/gallery7.jpg" alt="Фото 6"></div>
-                <div class="gallery-item" data-aos="fade-up"><img src="images/gallery8.jpg" alt="Фото 7"></div>
-                <div class="gallery-item" data-aos="fade-up"><img src="images/gallery6.jpg" alt="Фото 8"></div>
-                <div class="gallery-item" data-aos="fade-up"><img src="images/gallery9.jpg" alt="Фото 9"></div>
+                <div class="gallery-item" data-aos="fade-up"><img src="images/gallery1.jpg" alt="Фото 1" loading="lazy">
+                </div>
+                <div class="gallery-item" data-aos="fade-up"><img src="images/gallery2.jpg" alt="Фото 2" loading="lazy">
+                </div>
+                <div class="gallery-item" data-aos="fade-up"><img src="images/gallery3.jpg" alt="Фото 3" loading="lazy">
+                </div>
+                <div class="gallery-item" data-aos="fade-up"><img src="images/gallery4.jpg" alt="Фото 4" loading="lazy">
+                </div>
+                <div class="gallery-item" data-aos="fade-up"><img src="images/gallery5.jpg" alt="Фото 5" loading="lazy">
+                </div>
+                <div class="gallery-item" data-aos="fade-up"><img src="images/gallery7.jpg" alt="Фото 6" loading="lazy">
+                </div>
+                <div class="gallery-item" data-aos="fade-up"><img src="images/gallery8.jpg" alt="Фото 7" loading="lazy">
+                </div>
+                <div class="gallery-item" data-aos="fade-up"><img src="images/gallery6.jpg" alt="Фото 8" loading="lazy">
+                </div>
+                <div class="gallery-item" data-aos="fade-up"><img src="images/gallery9.jpg" alt="Фото 9" loading="lazy">
+                </div>
             </div>
 
         </div>
@@ -279,7 +290,8 @@
             <button class="next-btn">&#10095;</button>
         </div>
     </section>
-    <!-- Модальне вікно -->
+
+
     <div id="modal" class="modal hidden">
         <div class="modal-content">
             <h2>Замовлення послуги</h2>
@@ -294,33 +306,29 @@
         </div>
     </div>
 
+    <footer>
+        <section id="contacts" class="contacts">
+            <div class="container">
+                <div class="contacts-content">
+                    <div class="contacts-info">
+                        <p><i class="fas fa-map-marker-alt"></i> м. Біла Церква, вул. Андрія Шептицького, 2</p>
+                        <p><i class="fas fa-envelope"></i> <a href="mailto:bc_varta@ukr.net">bc_varta@ukr.net</a></p>
+                        <p><i class="fas fa-phone"></i> +380 960 000 002</p>
+                    </div>
 
 
-
-
-
-    <!-- Контакти -->
-    <section id="contacts" class="contacts">
-        <div class="container">
-            <div class="contacts-content">
-                <!-- Ліва частина: контактна інформація -->
-                <div class="contacts-info">
-                    <p><i class="fas fa-map-marker-alt"></i> м. Біла Церква, вул. Андрія Шептицького, 2</p>
-                    <p><i class="fas fa-envelope"></i> <a href="mailto:bc_varta@ukr.net">bc_varta@ukr.net</a></p>
-                    <p><i class="fas fa-phone"></i> +380 960 000 002</p>
                 </div>
-
-
-            </div>
-
-            <div class="contacts-social">
-                <a href="https://www.facebook.com/MunitsypalnaVartaBC" target="_blank"><i
-                        class="fab fa-facebook"></i></a>
-                <div class="footer-copy">
-                    © 2024 КП БМР Муніципальна Варта
+                <div class="contacts-social">
+                    <a href="https://www.facebook.com/MunitsypalnaVartaBC" target="_blank"><i
+                            class="fab fa-facebook"></i></a>
+                    <div class="footer-copy">
+                        © 2024 КП БМР Муніципальна Варта
+                    </div>
                 </div>
-            </div>
-    </section>
+        </section>
+    </footer>
+
+
 
 
     <div id="fullscreenModal" class="modal-gallery hidden">
